--- a/Notes2022/Client/App.razor
+++ b/Notes2022/Client/App.razor
@@ -1,6 +1,4 @@
-﻿@*@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
-*@
-<Blazored.Modal.CascadingBlazoredModal HideCloseButton="true" DisableBackgroundCancel="true" HideHeader="true" Class="blazored-custom-modal">
+﻿<Blazored.Modal.CascadingBlazoredModal HideCloseButton="true" DisableBackgroundCancel="true" HideHeader="true" Class="blazored-custom-modal">
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -14,26 +12,3 @@
         </NotFound>
     </Router>
 </Blazored.Modal.CascadingBlazoredModal>
-
-@*
-@code {
-
-
-    protected override async Task OnInitializedAsync()
-    {
-        LoginReply lr = await GetLoginReply();
-        if (lr is not null)
-            Globals.LoginReply = lr;
-    }
-    public async Task<LoginReply> GetLoginReply()
-    {
-        return  (LoginReply)(await sessionStorage.GetItemAsync<LoginReply>("LoginReply"));
-    }
-
-    public async void SetLoginReply(LoginReply reply)
-    {
-        await sessionStorage.SetItemAsync<LoginReply>("LoginReply", reply);
-    }
-
-}
-*@
