Upates to cookie Login and use of Syncfusion dropdowns on index

--- a/Notes2022/Client/Pages/Authentication/Logout.razor
+++ b/Notes2022/Client/Pages/Authentication/Logout.razor
@@ -53,17 +53,11 @@
             }
         }
 
-        public static string Base64Encode(string plainText)
-        {
-            var plainTextBytes = System.Text.Encoding.UTF8.GetBytes(plainText);
-            return System.Convert.ToBase64String(plainTextBytes);
-        }
-
         protected async Task WriteCookies(LoginReply ar)
         {
             try
             {
-                string xx = Base64Encode(HttpUtility.HtmlEncode(ar));
+                string xx = Globals.Base64Encode(HttpUtility.HtmlEncode(ar));
                 await module.InvokeAsync<string>("CreateCookie", Globals.Cookie, xx, 1);
             }
             catch (Exception ex)
