--- a/Notes2022/Client/Shared/MainLayout.razor
+++ b/Notes2022/Client/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<Notes2022.Client.Comp.CookieStateAgent />  @* Cookie login state helper *@
+
 <div class="page">
     <main>
         <div class="top-row px-4 auth" style="background-color: #555;">
