CLean up and centralize login cookie mgt in Layout

--- a/Notes2022/Client/Pages/Authentication/Logout.razor
+++ b/Notes2022/Client/Pages/Authentication/Logout.razor
@@ -21,48 +21,48 @@
 
 @code {
 
-    private IJSObjectReference? module;
+    //private IJSObjectReference? module;
 
     protected override async Task OnInitializedAsync()
     {
         await AuthClient.LogoutAsync(new NoRequest(), myState.AuthHeader);
         myState.LoginReply = null;
-        await WriteCookies(new LoginReply());
+        //await WriteCookies(new LoginReply());
 
         //await sessionStorage.RemoveItemAsync("LoginReply");
-        Globals.LoginDisplay?.Reload();
-        Globals.NavMenu?.Reload();
+        //Globals.LoginDisplay?.Reload();
+        //Globals.NavMenu?.Reload();
         Navigation.NavigateTo("");
     }
 
         async ValueTask IAsyncDisposable.DisposeAsync()
         {
-            if (module is not null)
-            {
-                await module.DisposeAsync();
-            }
+            //if (module is not null)
+            //{
+            //    await module.DisposeAsync();
+            //}
         }
 
-        protected override async Task OnAfterRenderAsync(bool firstRender)
-        {
-            if (firstRender)
-            {
-                module = await JS.InvokeAsync<IJSObjectReference>("import",
-                    "./cookies.js");
-            }
-        }
+        //protected override async Task OnAfterRenderAsync(bool firstRender)
+        //{
+        //    if (firstRender)
+        //    {
+        //        module = await JS.InvokeAsync<IJSObjectReference>("import",
+        //            "./cookies.js");
+        //    }
+        //}
 
-        protected async Task WriteCookies(LoginReply ar)
-        {
-            try
-            {
-                string xx = Globals.Base64Encode(HttpUtility.HtmlEncode(ar));
-                await module.InvokeAsync<string>("CreateCookie", Globals.Cookie, xx, 1);
-            }
-            catch (Exception ex)
-            {
+        //protected async Task WriteCookies(LoginReply ar)
+        //{
+        //    try
+        //    {
+        //        string xx = Globals.Base64Encode(HttpUtility.HtmlEncode(ar));
+        //        await module.InvokeAsync<string>("CreateCookie", Globals.Cookie, xx, 1);
+        //    }
+        //    catch (Exception ex)
+        //    {
 
-            }
-        }
+        //    }
+        //}
 
 }
