--- a/Notes2022/Client/_Imports.razor
+++ b/Notes2022/Client/_Imports.razor
@@ -23,4 +23,4 @@
 @using Syncfusion.Blazor.SplitButtons
 @using Syncfusion.Blazor.Calendars
 
-@inject StateContainer myState
+@inject MainLayout myState
