--- a/Notes2022/Client/Pages/Authentication/Login.razor
+++ b/Notes2022/Client/Pages/Authentication/Login.razor
@@ -11,13 +11,13 @@
 @using Syncfusion.Blazor.Buttons
 @using Syncfusion.Blazor.Inputs
 
-@implements IAsyncDisposable
-
+@*@implements IAsyncDisposable
+*@
 @inject Notes2022Server.Notes2022ServerClient AuthClient
 @inject NavigationManager Navigation
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
-@inject IJSRuntime JS;
-
+@*@inject IJSRuntime JS;
+*@
 <h1>Login</h1>
 
 <div class="row">
