--- a/Notes2022/Client/Shared/MainLayout.razor
+++ b/Notes2022/Client/Shared/MainLayout.razor
@@ -1,6 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<Notes2022.Client.Comp.CookieStateAgent />  @* Cookie login state helper *@
+@using Grpc.Core
+@using Notes2022.Proto
+
+@implements IAsyncDisposable
+
+@inject IJSRuntime JS;
 
 <div class="page">
     <main>
@@ -13,3 +18,4 @@
         </article>
     </main>
 </div>
+
