Add grpc spinup

--- a/Notes2022/Client/Shared/MainLayout.razor
+++ b/Notes2022/Client/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
 @implements IAsyncDisposable
 
 @inject IJSRuntime JS;
+@inject Notes2022Server.Notes2022ServerClient Client
 
 <div class="page">
     <main>
