Updates for this version..

--- a/Notes2022/Client/Pages/About2.razor
+++ b/Notes2022/Client/Pages/About2.razor
@@ -42,6 +42,7 @@
 <p>
     A prior effort, 3.0, was written using Microsoft ASP.NET MVC 5. Version 2022 derives
     from 3.0 but uses a new foundation, CORE 6.0 with Blazor, which permits greater flexibility.
+    This version also uses gRPC for client/server communications.
 </p>
 <p>
     Uses components from the Community Edition of <a href="https://www.syncfusion.com/" target="_blank">Syncfusion</a> Essential Studio 2022 Volume 1.
@@ -51,7 +52,7 @@
     <a href="http://friendlyorangeglow.com/" target="_blank">http://friendlyorangeglow.com/</a>
 </p>
 <p>
-    Source for Notes 2022 can be found at <a href="https://github.com/drsinder/Notes2022-new" target="_blank">https://github.com/drsinder/Notes2022-new</a>
+    Source for Notes 2022 can be found at <a href="https://github.com/drsinder/Notes2022GRPC.new" target="_blank">https://github.com/drsinder/Notes2022GRPC.new</a>
 </p>
 @*<hr />
 <a href="SampleImages">See some sample images from NovaNet's Notes</a>
