Enable default flipped response oser preference

--- a/Notes2022/Client/Pages/Preferences.razor
+++ b/Notes2022/Client/Pages/Preferences.razor
@@ -52,6 +52,8 @@ else
                 <br />
                 <SfSwitch @bind-Checked="@UserData.Pref3"></SfSwitch> Show Responses by default
                 <br />
+                <SfSwitch @bind-Checked="@UserData.Pref4"></SfSwitch> Flip Response order by default
+                <br />
                 <button type="button" @onclick="OnSubmit" class="btn btn-info btn-sm">Submit</button>&nbsp;&nbsp;
                 <button type="button" @onclick="Cancel" class="btn btn-info btn-sm">Close</button>
 
