--- a/Notes2022/Client/Pages/Preferences.razor
+++ b/Notes2022/Client/Pages/Preferences.razor
@@ -50,6 +50,8 @@ else
                 <br />
                 <SfSwitch @bind-Checked="@UserData.Pref7"></SfSwitch> Show Content on index by default when expanded
                 <br />
+                <SfSwitch @bind-Checked="@UserData.Pref5"></SfSwitch> Show Response Content on index by default when expanded
+                <br />
                 <SfSwitch @bind-Checked="@UserData.Pref3"></SfSwitch> Show Responses by default
                 <br />
                 <SfSwitch @bind-Checked="@UserData.Pref4"></SfSwitch> Flip Response order by default
