Add documentation to .proto remove some unused rpc Add server side security

--- a/Notes2022/Client/Pages/Authentication/Login.razor
+++ b/Notes2022/Client/Pages/Authentication/Login.razor
@@ -31,7 +31,7 @@
                     <ValidationSummary />
     
                     <div class="form-floating">
-                        <strong>Email</strong>
+                        <strong>Email or Name</strong>
                         <InputText id="name" @bind-Value="Input.Email" class="form-control medium-input-minus" /> 
                     </div>
                     <div class="form-floating">
