--- a/Notes2022/Client/Shared/LoginDisplay.razor
+++ b/Notes2022/Client/Shared/LoginDisplay.razor
@@ -4,7 +4,7 @@
 
 @if (myState.IsAuthenticated)
 {
-    <SfButton @onclick="GotoProfile" class="logbutton">@myState.UserInfo?.Email</SfButton>
+    <SfButton @onclick="GotoProfile" class="logbutton">@myState.UserInfo?.Displayname</SfButton>
     <SfButton @onclick="BeginSignOut" class="logbutton">Log out</SfButton>
     <SfButton @onclick="GotoHome" class="homebutton">Home</SfButton>
 }
