Move some significant blocks of text from client to server and grpc them when needed.

--- a/Notes2022/Client/Dialogs/HelpDialog.razor
+++ b/Notes2022/Client/Dialogs/HelpDialog.razor
@@ -22,34 +22,27 @@
     **
     **--------------------------------------------------------------------------*@
 
-<div class="dialogs modal-body">
-    <h3>Note List Help</h3>
-    <p>
-        <b>L</b> - list of NoteFiles.<br />
-        <b>N</b> - write a new base note.<br />
-        <b>S</b> - search options.<br />
-        <b>H</b> - Show/Download file as Html.<br />
-        <b>h</b> - Show/Download file as alternate Html.<br />
-        <b>m</b> - mail NotesFile as Html.<br />
-        <b>X</b> - Export the file.<br />
-        <b>M</b> - Mark My notes for Output. <br />
-        <b>O</b> - Output Marked Notes.<br />
-        <b>A</b> - edit the access controls.<br />
-        <b>a</b> - To select an archive.<br />
-        <b>P</b> - To print entire file.<br />
-        <b>R</b> - To Refresh/Reload list of notes.<br />
-        <b>U</b> - See the Uploaded files.<br />
-        <b>J</b> - Json Export - Can be used to import later.<br />
-        <br />
-        In the brown input box:<br />
-        Type a number and press <b>RETURN/ENTER</b> to display that note number.<br />
-        You may go to a response by typing the <b>noteNumber.responseNumbe</b>r and pressing <b>RETURN/ENTER</b>.
-    </p>
-    <button type="button" @onclick="Cancel" class="btn btn-info btn-sm">Close</button>
-</div>
+@inject Notes2022Server.Notes2022ServerClient Client
 
+<div class="dialogs modal-body">
+@((MarkupString)@text)
+
+    <button type="button" @onclick="Cancel" class="btn btn-info btn-sm">Close</button>
+
+</div>
 @code {
     [CascadingParameter] BlazoredModalInstance ModalInstance { get; set; }
+    
+    private string text = string.Empty;
+
+    /// <summary>
+    /// Get some simple stuff from server
+    /// </summary>
+    /// <returns></returns>
+    protected override async Task OnInitializedAsync()
+    {
+        text = (await Client.GetTextFileAsync(new AString() { Val = "helpdialog.html" })).Val;
+    }
 
     private void Cancel()
     {
