ShowNote forwards to NoteIndex with a Global set for NoteId

--- a/Notes2022/Client/Pages/ShowNote.razor
+++ b/Notes2022/Client/Pages/ShowNote.razor
@@ -1,6 +1,6 @@
 ﻿@page "/notedisplay/{NoteID:long}"
 
-@if (FileId > 0)
+@*@if (FileId > 0)
 {
     <Notes2022.Client.Pages.NoteIndex NotesfileId="@FileId" CurrentNoteId="@NoteId" ></Notes2022.Client.Pages.NoteIndex>
-}
+}*@
