--- a/Notes2022/Client/Panels/NotePanel.razor
+++ b/Notes2022/Client/Panels/NotePanel.razor
@@ -38,7 +38,7 @@
     }
     else
     {
-        if (!IsMini)
+        @if (!IsMini)
         {
             if (ShowChild && model.Header.RefId != 0)
             {
@@ -120,7 +120,7 @@
             </div>
         </div>
 
-        if (IsRootNote && @model != null && !model.Header.IsDeleted)
+        @if (IsRootNote && @model != null && !model.Header.IsDeleted)
         {
             <span><strong>Show versions </strong></span><SfSwitch @bind-Checked="ShowVers" TChecked="bool"></SfSwitch>
         }
